# homeworks

./: board.cpp  board.h  game.h  mainwindow.cpp  mainwindow.h  qgameboard.cpp  qgameboard.h  qresetbutton.cpp  subject.h
2048E/: CMakeLists.txt  game.cpp  qtile.cpp  tile.cpp
Computational/: Algorithms.tpp  BoundingBox.hpp  BoundingBox.tpp  CompGeom.hpp  Coordinate.hpp  Coordinate.tpp  Line.hpp  Point.hpp  Polygon.hpp  Polygon.tpp  Ray.hpp  Segment.hpp  Vector.hpp  Vector.tpp
Game/: GameWindow.h  SettingsManager.h
Game/Game/: CMakeLists.txt  EntryWindow.cpp  EntryWindow.h  GameWindow.cpp  SettingsManager.cpp  main.cpp
GraphCourseWork/: Graph.cpp  Graph.hpp  main.cpp  visualizer.py
HomeWork/: 2DArray.cpp  BinarySerach.cpp  LeftRotation.cpp  MergeSort.cpp
HomeWorks2dSemester/Calculator/: main.cpp
HomeWorks2dSemester/File System/: FileSystem.cpp  FileSystem.h  main.cpp
HomeWorks2dSemester/IpValidator/: validator.cpp
HomeWorks2dSemester/Lazy/: lazy_evaluation.cpp  lazy_evaluation.hpp
HomeWorks2dSemester/Navigator/: Navigator.cpp  Navigator.hpp
HomeWorks2dSemester/Optional/: Optional.cpp  Optional.hpp
HomeWorks2dSemester/Pool/: Pool.cpp  Pool.hpp
HomeWorks2dSemester/PoolAllocator/: PoolAllocator.cpp  PoolAllocator.hpp
HomeWorks2dSemester/grep/: CMakeLists.txt  main.cpp
HomeWorks2dSemester/grep/include/: arg_parser.hpp  file_reader.hpp  grep_error.hpp  line_processor.hpp  matcher.hpp  output.hpp
HomeWorks2dSemester/grep/src/: arg_parser.cpp  file_reader.cpp  grep_error.cpp  line_processor.cpp  matcher.cpp  output.cpp
(+67 files in other folders)
